fix selectinput scrollbar

--- a/docs/src/global.css
+++ b/docs/src/global.css
@@ -13,3 +13,24 @@
 body {
   font-family: "Inter", sans-serif;
 }
+
+* {
+  scroll-behavior: smooth;
+}
+*::-webkit-scrollbar {
+  appearance: none;
+  -webkit-appearance: none;
+  width: 8px;
+  height: 8px;
+}
+*::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #ffffff20;
+  border: 1px solid #ffffff20;
+  border-radius: 3px;
+}
+*::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
